# tree-sitter-balafon

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  build.zig  build.zig.zon  flake.nix  go.mod  grammar.js  package-lock.json  package.json  pom.xml  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-balafon.pc.in
bindings/go/: binding.go  binding_test.go  go.mod
bindings/java/main/io/github/treesitter/jtreesitter/balafon/: TreeSitterBalafon.java
bindings/java/test/: TreeSitterBalafonTest.java
bindings/node/: binding.cc  index.d.ts  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_balafon/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterBalafon/: balafon.h
bindings/swift/TreeSitterBalafonTests/: TreeSitterBalafonTests.swift
bindings/zig/: root.zig  test.zig
examples/: drums.bal
queries/balafon/: highlights.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: bars.txt  commands.txt  comments.txt  notes.txt
